--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@
 <body>
 <div id="map"></div>
 <script>
-var map = L.map('map');
 
-L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png', {
-  attribution: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル</a>"
-}).addTo(map);
+function init() {
+    var map = L.map('map').setView([35.68, 139.76], 14);
+    map.options.minZoom = 10;
+    map.options.maxZoom = 18;
+    L.tileLayer('https://gic-plateau.s3.ap-northeast-1.amazonaws.com/2020/ortho/tiles/{z}/{x}/{y}.png', {
+      attribution: '<a href="https://www.mlit.go.jp/plateau/">国土交通省Project PLATEAU</a>'
+    }).addTo(map);
+  }
+
+//var map = L.map('map');
+//L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png', {
+//  attribution: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル</a>"
+//}).addTo(map);
 
 map.setView([35.3622222, 138.7313889], 5);
 </script>
