--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ function init() {
 //L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png', {
 //  attribution: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル</a>"
 //}).addTo(map);
-
-map.setView([35.3622222, 138.7313889], 5);
+//map.setView([35.3622222, 138.7313889], 5);
 </script>
 </body>
 </html>
