--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@ function init() {
 //}).addTo(map);
 //map.setView([35.3622222, 138.7313889], 5);
 </script>
+
+<body onload="init()">
+  <div id="map" style="width: 80%; height: 600px; border: solid 1px"></div>
 </body>
+
 </html>
